--- a/vignettes/micromodal.Rmd
+++ b/vignettes/micromodal.Rmd
@@ -14,6 +14,8 @@ knitr::opts_chunk$set(
 )
 ```
 
+## Getting started
+
 The goal of micromodal is to create simple and elegant modal dialogs which are 
 [WAI-ARIA guidelines](https://www.w3.org/TR/wai-aria-practices-1.1/#dialog_modal) compliant with
 minimal configuration.
@@ -40,8 +42,8 @@ See [live demo here](https://mwavu.shinyapps.io/micromodal/).
 
 ### Simple usage
 
-<details>
-<summary>Show code</summary>
+Though a bit long, this example clearly depicts all there is to know about
+using `{micromodal}`.
 
 ```r
 library(shiny)
@@ -149,14 +151,11 @@ ui <- bslib::page(
 shinyApp(ui, server)
 ```
 
-</details>
+### With uiOutput + renderUI
 
-### Usage with uiOutput + renderUI
+If need be, you can render the modal and it's trigger dynamically.
 
-#### I.
-
-<details>
-<summary>Show example I</summary>
+#### I. Render modal
 
 ```r
 library(shiny)
@@ -198,12 +197,7 @@ server <- \(input, output, session) {
 shinyApp(ui, server)
 ```
 
-</details>
-
-#### II.
-
-<details>
-<summary>Show example II</summary>
+#### II. Render modal + trigger
 
 ```r
 library(shiny)
@@ -245,7 +239,63 @@ server <- \(input, output, session) {
 shinyApp(ui, server)
 ```
 
-</details>
+**NB: micromodal might not work with other `*Output` + `render*` eg. `plotOutput()`**
 
 ### Inside modules
 
+As far as usage of `{micromodal}` in modules is concerned, I only need to
+remind you of one thing:
+
+> It's always a missing call to `NS()`
+
+Thank me later.
+
+```r
+library(shiny)
+library(micromodal)
+
+# module UI:
+sayhi_ui <- \(id) {
+  ns <- NS(id)
+  tagList(
+    tags$h1("Hello"),
+    actionLink(
+      inputId = ns("sayhi"),
+      label = "Say Hi",
+      `data-micromodal-trigger` = ns("greetings_modal")
+    ),
+    micromodal(
+      id = ns("greetings_modal"),
+      title = "Greetings folks!",
+      content = tags$p(
+        "I'd like to thank you for joining us here today."
+      )
+    )
+  )
+}
+
+# module server is not necessary in our case, just putting it here 
+# for formality:
+sayhi_server <- \(id) {
+  moduleServer(
+    id = id,
+    module = \(input, output, session) {
+      
+    }
+  )
+}
+
+ui <- bslib::page(
+  title = "In Modules",
+  theme = bslib::bs_theme(version = 5),
+  use_micromodal(),
+  tags$div(
+    class = "container",
+    sayhi_ui("hi")
+  )
+)
+
+server <- \(input, output, session) {}
+
+shinyApp(ui, server)
+```
