ch: remove emojis from examples

--- a/vignettes/micromodal.Rmd
+++ b/vignettes/micromodal.Rmd
@@ -50,7 +50,7 @@ library(shiny)
 library(micromodal)
 
 server <- \(input, output, session) {
-
+  
 }
 
 ui <- bslib::page(
@@ -82,7 +82,7 @@ ui <- bslib::page(
     # modal-1:
     micromodal(
       id = "modal-1",
-      title = "🔒 Login",
+      title = "Login",
       content = tagList(
         textInput(
           inputId = "name",
@@ -119,7 +119,7 @@ ui <- bslib::page(
     # modal-2:
     micromodal(
       id = "modal-2",
-      title = "Micromodal 🔥",
+      title = "Micromodal",
       content = tagList(
         tags$p("This is a completely accessible modal."),
         tags$p(
