--- a/README.Rmd
+++ b/README.Rmd
@@ -22,6 +22,13 @@ Modal dialogs for R Shiny via [Micromodal.js](https://github.com/Ghosh/micromoda
 
 ## Installation
 
+To install the package from CRAN use:
+
+```r
+install.packages("micromodal")
+```
+
+
 You can install the dev version of `{micromodal}` with:
 
 ```r
